cmake_minimum_required(VERSION 3.0)

if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
  if(DEFINED ENV{VITASDK})
    set(CMAKE_TOOLCHAIN_FILE "$ENV{VITASDK}/share/vita.toolchain.cmake" CACHE PATH "toolchain file")
  else()
    message(FATAL_ERROR "Please define VITASDK to point to your SDK path!")
  endif()
endif()

project(novsync)
include("${VITASDK}/share/vita.cmake" REQUIRED)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-q -Wall -O2 -nostdlib")

add_executable(${PROJECT_NAME}
  novsync.c
)

target_link_libraries(${PROJECT_NAME}
  taihen_stub
  SceDisplay_stub
  SceLibKernel_stub
)

vita_create_self(${PROJECT_NAME}.suprx ${PROJECT_NAME}
  CONFIG exports.yml
  UNSAFE
)
